--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@ http://www.tooplate.com/view/2091-ziggy
           <div class="col-md-12">
             <ul>
               <li>
-                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/bugthecat.studio"><i class="fa fa-facebook"></i></a>
               </li>
               <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="https://twitter.com/BugTheCatStudio"><i class="fa fa-twitter"></i></a>
               </li>
             </ul>
             <p>Copyright &copy; 2020 Bug The Cat Co., Ltd | Design: Tooplate</p>
