--- a/index.html
+++ b/index.html
@@ -4,140 +4,142 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="no-js" lang="">
-  <!--<![endif]-->
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <!--
+<!--<![endif]-->
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <!--
 
 Template 2091 Ziggy
 
 http://www.tooplate.com/view/2091-ziggy
 
 -->
-    <title>Ziggy HTML Template</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bug The Cat</title>
+  <meta name="description" content="" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800"
-      rel="stylesheet"
-    />
-    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" />
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css" />
-    <link rel="stylesheet" href="css/fontAwesome.css" />
-    <link rel="stylesheet" href="css/tooplate-style.css" />
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css" />
+  <link rel="stylesheet" href="css/fontAwesome.css" />
+  <link rel="stylesheet" href="css/tooplate-style.css" />
 
-    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-  </head>
-  <body>
-    <section class="first-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="text-content">
-              <h2>Bug The Cat</h2>
-              <div class="line-dec"></div>
-              <span>A Game Studio</span>
-            </div>
+  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+</head>
+
+<body>
+  <section class="first-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="text-content">
+            <h2>Bug The Cat</h2>
+            <div class="line-dec"></div>
+            <span>A Game Studio</span>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="second-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <div class="icon">
-                <img src="img/first-icon.png" alt="" />
-              </div>
-              <h4>Warm</h4>
-              <p>
-                <i>
-                  Something that makes you feel warm on the inside. Its similar
-                  to cool or awesome, but is more personal. You can refer to
-                  someone being warm if they do something that is really shway
-                  or makes you happy on a personal level as opposed to just a
-                  social one.
-                </i>
-              </p>
+  <section class="second-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-6">
+          <div class="service-item">
+            <div class="icon">
+              <img src="img/flame.png" alt="" />
             </div>
+            <h4>Warm</h4>
+            <p>
+              <i>
+                Something that makes you feel warm on the inside. Its similar
+                to cool or awesome, but is more personal. You can refer to
+                someone being warm if they do something that is really shway
+                or makes you happy on a personal level as opposed to just a
+                social one.
+              </i>
+            </p>
           </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <div class="icon">
-                <img src="img/second-icon.png" alt="" />
-              </div>
-              <h4>Gentle</h4>
-              <p>
-                <i>
-                  To think that something is harmless and good.
-                </i>
-              </p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="service-item">
+            <div class="icon">
+              <img src="img/forest.png" alt="" />
             </div>
+            <h4>Gentle</h4>
+            <p>
+              <i>
+                To think that something is harmless and good.
+              </i>
+            </p>
           </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <div class="icon">
-                <img src="img/third-icon.png" alt="" />
-              </div>
-              <h4>Creative</h4>
-              <p>
-                <i>
-                  The act of coming up with an idea to solve a problem. The
-                  problem may be given to you or you may have created the
-                  problem, thus being truly creative.
-                </i>
-              </p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="service-item">
+            <div class="icon">
+              <img src="img/sunny.png" alt="" />
             </div>
+            <h4>Creative</h4>
+            <p>
+              <i>
+                The act of coming up with an idea to solve a problem. The
+                problem may be given to you or you may have created the
+                problem, thus being truly creative.
+              </i>
+            </p>
           </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="service-item">
-              <div class="icon">
-                <img src="img/fourth-icon.png" alt="" />
-              </div>
-              <h4>Game</h4>
-              <p>
-                <i>
-                  Life. Life is a game and we all play it as if it were real.
-                </i>
-              </p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="service-item">
+            <div class="icon">
+              <img src="img/lightning.png" alt="" />
             </div>
+            <h4>Game</h4>
+            <p>
+              <i>
+                Life. Life is a game and we all play it as if it were real.
+              </i>
+            </p>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <section class="third-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-10 col-md-offset-1">
-            <div class="left-image col-md-4">
-              <img src="img/left-image.png" alt="" />
-            </div>
-            <div class="right-text col-md-8">
-              <h4><em>Integer suscipit</em><br />Nullam volutpat mi vel</h4>
-              <p>
-                <i>
-                  Nulla tempor lectus at mauris bibendum porttitor. Aenean
-                  ultrices orci id nibh sodales, vel suscipit arcu vulputate.
-                  Pellentesque hendrerit diam quis leo dignissim, lacinia
-                  interdum nunc volutpat. Morbi lobortis mattis lectus, a dictum
-                  augue lobortis non. Fusce eu nulla sagittis, scelerisque eros
-                  fringilla, commodo dolor.
-                </i>
-              </p>
-            </div>
+  <section class="third-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+          <div class="left-image col-md-4">
+            <img src="img/sparkles (1).png" alt="" />
+          </div>
+          <div class="right-text col-md-8">
+            <h4><em>About us</em><br />What we do</h4>
+            <p>
+              <i>
+                WE ARE A TEAM OF PROGRAMMER, ARTIST, MUSICIAN SPECIALIZING IN MAKING A WIDE RANGE OF GAMES INCLUDING BUT
+                NOT LIMITED TO MOBILES, CONSOLE, PC.
+              </i>
+            </p>
+            <P>
+              <i>
+                WE ENSURE SOUND DESIGN AND SMOOTH USER EXPERIENCES THROUGHOUT PLAYER'S JOURNEY, FROM FIRST GLANCE
+                TO END-GAME CONTENTS.
+              </i>
+            </P>
+
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- <section class="fourth-section">
+  <!-- <section class="fourth-section">
       <div class="container">
         <div class="row">
           <div class="col-md-3 col-sm-6">
@@ -191,7 +193,7 @@ http://www.tooplate.com/view/2091-ziggy
       </div>
     </section> -->
 
-    <!-- <section class="fivth-section">
+  <!-- <section class="fivth-section">
       <div class="container">
         <div class="row">
           <div class="col-md-10 col-md-offset-1">
@@ -217,112 +219,90 @@ http://www.tooplate.com/view/2091-ziggy
       </div>
     </section> -->
 
-    <section class="sixth-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="row">
-              <form id="contact" action="" method="post">
-                <div class="col-md-6">
-                  <fieldset>
-                    <input
-                      name="name"
-                      type="text"
-                      class="form-control"
-                      id="name"
-                      placeholder="Your name..."
-                      required
-                    />
-                  </fieldset>
-                </div>
-                <div class="col-md-6">
-                  <fieldset>
-                    <input
-                      name="email"
-                      type="email"
-                      class="form-control"
-                      id="email"
-                      placeholder="Your email..."
-                      required
-                    />
-                  </fieldset>
-                </div>
-                <div class="col-md-12">
-                  <fieldset>
-                    <textarea
-                      name="message"
-                      rows="6"
-                      class="form-control"
-                      id="message"
-                      placeholder="Your message..."
-                      required
-                    ></textarea>
-                  </fieldset>
-                </div>
-                <div class="col-md-12">
-                  <fieldset>
-                    <button type="submit" id="form-submit" class="btn">
-                      Send Message
-                    </button>
-                  </fieldset>
-                </div>
-              </form>
-            </div>
+  <section class="sixth-section">
+    <div class="container">
+      <div class="row">
+        <!-- <div class="col-md-6">
+          <div class="row">
+            <form id="contact" action="" method="post">
+              <div class="col-md-6">
+                <fieldset>
+                  <input name="name" type="text" class="form-control" id="name" placeholder="Your name..." required />
+                </fieldset>
+              </div>
+              <div class="col-md-6">
+                <fieldset>
+                  <input name="email" type="email" class="form-control" id="email" placeholder="Your email..."
+                    required />
+                </fieldset>
+              </div>
+              <div class="col-md-12">
+                <fieldset>
+                  <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..."
+                    required></textarea>
+                </fieldset>
+              </div>
+              <div class="col-md-12">
+                <fieldset>
+                  <button type="submit" id="form-submit" class="btn">
+                    Send Message
+                  </button>
+                </fieldset>
+              </div>
+            </form>
           </div>
-          <div class="col-md-5">
-            <div class="right-info">
-              <ul>
-                <li>
-                  <a href="#"
-                    ><i class="fa fa-envelope"></i>team@bugthecat.com</a
-                  >
-                </li>
-                <li>
-                  <a href="#"><i class="fa fa-phone"></i>+84 346 875 211</a>
-                </li>
-                <li>
-                  <a href="#"
-                    ><i class="fa fa-map-marker"></i>19th Floor, Office Zone,
-                    Indochina Park Tower, 04 Nguyen Dinh Chieu Street, Đa Kao
-                    Ward, District 1, Ho Chi Minh City, Vietnam</a
-                  >
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <footer>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
+        </div> -->
+        <div class="col-md-5">
+          <div class="right-info">
             <ul>
               <li>
-                <a href="https://www.facebook.com/bugthecat.studio"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-envelope"></i>team@bugthecat.com</a>
               </li>
               <li>
-                <a href="https://twitter.com/BugTheCatStudio"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-phone"></i>+84 346 875 211</a>
+              </li>
+              <li>
+                <a href="#"><i class="fa fa-map-marker"></i>19th Floor, Office Zone,
+                  Indochina Park Tower, 04 Nguyen Dinh Chieu Street, Đa Kao
+                  Ward, District 1, Ho Chi Minh City, Vietnam</a>
               </li>
             </ul>
-            <p>Copyright &copy; 2020 Bug The Cat Co., Ltd | Design: Tooplate</p>
           </div>
         </div>
       </div>
-    </footer>
+    </div>
+  </section>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script>
-      window.jQuery ||
-        document.write(
-          '<script src="js/vendor/jquery-1.11.2.min.js"><\/script>'
-        );
-    </script>
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <ul>
+            <li>
+              <a href="https://www.facebook.com/bugthecat.studio"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/BugTheCatStudio"><i class="fa fa-twitter"></i></a>
+            </li>
+          </ul>
+          <p>Copyright &copy; 2020 Bug The Cat Co., Ltd</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-    <script src="js/vendor/bootstrap.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script>
+    window.jQuery ||
+      document.write(
+        '<script src="js/vendor/jquery-1.11.2.min.js"><\/script>'
+      );
+  </script>
 
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
-  </body>
+  <script src="js/vendor/bootstrap.min.js"></script>
+
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+</body>
+
 </html>
