--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <!--<![endif]-->
 
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <!--
@@ -116,7 +117,7 @@ http://www.tooplate.com/view/2091-ziggy
       <div class="row">
         <div class="col-md-10 col-md-offset-1">
           <div class="left-image col-md-4">
-            <img src="img/sparkles (1).png" alt="" />
+            <img src="img/btc-logo.png" alt="" />
           </div>
           <div class="right-text col-md-8">
             <h4><em>About us</em><br />What we do</h4>
